feat!: On This Day API added as a possible source, Personal Settings screen to select which source to use, associated UI changes in the widget
